change references to DEV environments to STAGING, update URL substrings where relevant to sandbox.localcontexts

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -771,7 +771,7 @@
                         <i class="fa-solid fa-download"></i> Download
                         <div class="tooltip" style="margin-top: 6px; margin-left: 5px;"><strong>i</strong>
                             <span class="tooltiptext">
-                                {% if 'anth-ja77-lc-dev-42d5' in request.get_host %}
+                                {% if 'sandbox.localcontextshub' in request.get_host %}
                                     Project cannot be downloaded on the sandbox site.
                                 {% else %}
                                     The account that created this Project needs to be confirmed before download is available.
