--- a/templates/partials/_update-account.html
+++ b/templates/partials/_update-account.html
@@ -264,7 +264,7 @@
                                         data-clientid='APP-IBW6UOF5FGJG0ODB' 
                                         data-env="production" 
                                         data-redirecturi="https://anth-ja77-local-contexts-8985.uc.r.appspot.com/researchers/connect-orcid/"
-                                    {% elif 'anth-ja77-lc-dev-42d5' in request.get_host %}
+                                    {% elif 'sandbox.localcontextshub' in request.get_host %}
                                         data-clientid='APP-6SAN29B74JQ6FEUQ' 
                                         data-env="sandbox" 
                                         data-redirecturi="https://anth-ja77-lc-dev-42d5.uc.r.appspot.com/researchers/connect-orcid/"
@@ -273,7 +273,7 @@
                                 </div>
                             </div>
                     
-                            {% if 'anth-ja77-lc-dev-42d5' in request.get_host %}
+                            {% if 'sandbox.localcontextshub' in request.get_host %}
                                 <small class="bold">Please note that since this is a test site, the ORCiD used will be the <a class="darkteal-text underline-hover" href="https://sandbox.orcid.org/">sandbox version</a>.</small><br>
                             {% elif 'localhost' in request.get_host %}
                                 <small class="bold">Localhost uses the <a class="darkteal-text underline-hover" href="https://sandbox.orcid.org/">sandbox version</a> of ORCiD.</small><br>
