--- a/templates/partials/banners/_sandbox-banner.html
+++ b/templates/partials/banners/_sandbox-banner.html
@@ -1,7 +1,9 @@
 {% load static %}
 
 <div class="sandbox-container">
-    <p class="block">Warning! anth-ja77-lc-dev-42d5.uc.r.appspot.com is permanently moving to <a href="https://sandbox.localcontextshub.org/login/" rel="me noopener noreferrer" class="underline-hover bold">sandbox.localcontextshub.org <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>. Please sign in or register there.</p>
+    <p class="block">Warning! sandbox.localcontextshub.org is a test website that is only used to test workflows.
+        <strong>localcontextshub.org</strong> is the official site.
+    </p>
 </div>
 
 <style>
