--- a/templates/partials/headers/_auth-header.html
+++ b/templates/partials/headers/_auth-header.html
@@ -1,7 +1,7 @@
 <!-- Header for when user is authenticated -->
 {% load static %}
 
-{% if 'anth-ja77-lc-dev-42d5' in request.get_host %}
+{% if 'sandbox.localcontextshub' in request.get_host %}
     {% include 'partials/banners/_sandbox-banner.html' %}
 {% endif %}
 
