change references to DEV environments to STAGING, update URL substrings where relevant to sandbox.localcontexts

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -42,7 +42,7 @@
                     <small>We have a test site where you can practice and explore the Local Contexts Hub. Follow this button to go to the Hub test site.</small>
                 </div>
                 <div class="margin-left-16">
-                    <a class="primary-btn orange-btn block" href="https://anth-ja77-lc-dev-42d5.uc.r.appspot.com/login/" target="_blank" rel="noopener">Let's go <i class="fa fa-arrow-right margin-left-8"></i></a></div>            
+                    <a class="primary-btn orange-btn block" href="https://sandbox.localcontextshub.org" target="_blank" rel="noopener">Let's go <i class="fa fa-arrow-right margin-left-8"></i></a></div>            
             </div>
         {% endif %}
 
