--- a/templates/partials/_update-account.html
+++ b/templates/partials/_update-account.html
@@ -205,83 +205,86 @@
                         {% endif %}
                     </div>
 
-                    {% if researcher %}
-                        <div><h3>ORCiD</h3></div>
-                        <div class="w-100 margin-bottom-16">
-                            {% if researcher.orcid %}
-                            <div class="flex-this space-between">
-                                <div>
-                                    <div itemscope itemtype="https://schema.org/Person">
-                                        <a 
-                                            class="darkteal-text underline-hover" 
-                                            itemprop="sameAs" 
-                                            target="orcid.widget" 
-                                            rel="me noopener noreferrer" 
-                                            style="vertical-align:top;"
-                                            {% if 'https://sandbox.orcid.org/' in researcher.orcid or 'https://orcid.org/' in researcher.orcid %}
-                                                content="{{ researcher.orcid }}" 
-                                                href="{{ researcher.orcid }}" 
-                                            {% elif 'X' in researcher.orcid %}
-                                                content="https://sandbox.orcid.org/{{ researcher.orcid }}" 
-                                                href="https://sandbox.orcid.org/{{ researcher.orcid }}"
-                                            {% else %}
-                                                content="https://orcid.org/{{ researcher.orcid }}" 
-                                                href="https://orcid.org/{{ researcher.orcid }}" 
-                                            {% endif %}
-                                        >
-                                            <img loading="lazy" src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">
-                                            {% if 'https://sandbox.orcid.org/' in researcher.orcid or 'https://orcid.org/' in researcher.orcid %}
-                                                {{ researcher.orcid }}
-                                            {% elif 'X' in researcher.orcid %}
-                                                https://sandbox.orcid.org/{{ researcher.orcid }} 
-                                            {% else %}
-                                                https://orcid.org/{{ researcher.orcid }}
-                                            {% endif %}
-                                        </a>
-                                    </div>                                
+                    <div class="hide"> <!-- TODO: UPDATE ORCID. HIDDEN FOR NOW-->
+                        {% if researcher %}
+                            <div><h3>ORCiD</h3></div>
+                            <div class="w-100 margin-bottom-16">
+                                {% if researcher.orcid %}
+                                <div class="flex-this space-between">
+                                    <div>
+                                        <div itemscope itemtype="https://schema.org/Person">
+                                            <a 
+                                                class="darkteal-text underline-hover" 
+                                                itemprop="sameAs" 
+                                                target="orcid.widget" 
+                                                rel="me noopener noreferrer" 
+                                                style="vertical-align:top;"
+                                                {% if 'https://sandbox.orcid.org/' in researcher.orcid or 'https://orcid.org/' in researcher.orcid %}
+                                                    content="{{ researcher.orcid }}" 
+                                                    href="{{ researcher.orcid }}" 
+                                                {% elif 'X' in researcher.orcid %}
+                                                    content="https://sandbox.orcid.org/{{ researcher.orcid }}" 
+                                                    href="https://sandbox.orcid.org/{{ researcher.orcid }}"
+                                                {% else %}
+                                                    content="https://orcid.org/{{ researcher.orcid }}" 
+                                                    href="https://orcid.org/{{ researcher.orcid }}" 
+                                                {% endif %}
+                                            >
+                                                <img loading="lazy" src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">
+                                                {% if 'https://sandbox.orcid.org/' in researcher.orcid or 'https://orcid.org/' in researcher.orcid %}
+                                                    {{ researcher.orcid }}
+                                                {% elif 'X' in researcher.orcid %}
+                                                    https://sandbox.orcid.org/{{ researcher.orcid }} 
+                                                {% else %}
+                                                    https://orcid.org/{{ researcher.orcid }}
+                                                {% endif %}
+                                            </a>
+                                        </div>                                
+                                    </div>
+
+                                    <div>
+                                        <a class="primary-btn white-btn" href="{% url 'disconnect-orcid' %}">Disconnect ORCiD</a>
+                                    </div> 
                                 </div>
 
-                                <div>
-                                    <a class="primary-btn white-btn" href="{% url 'disconnect-orcid' %}">Disconnect ORCiD</a>
-                                </div> 
-                            </div>
-
-                        {% else %}
-                            <div class="flex-this space-between">
-                                <div class="w-50"><p>We encourage you to have an ORCiD ID. <br>You can <a class="darkteal-text underline-hover" href="https://orcid.org/" target="_blank" rel="noopener">read more about ORCiD here</a>.</p></div>
-                                <!-- Show ORCiD widget based on hostname -->
-                                <div 
-                                    id="orcidWidget" 
-                                    {% if 'localcontextshub' in request.get_host %}
-                                        data-clientid='APP-IBW6UOF5FGJG0ODB' 
-                                        data-env="production" 
-                                        data-redirecturi="https://localcontextshub.org/researchers/connect-orcid/"
-                                    {% elif 'localhost' in request.get_host %}
-                                        data-clientid='APP-6SAN29B74JQ6FEUQ' 
-                                        data-env="sandbox" 
-                                        data-redirecturi="http://localhost:8000/researchers/connect-orcid/"
-                                    {% elif 'anth-ja77-local-contexts-8985' in request.get_host %}
-                                        data-clientid='APP-IBW6UOF5FGJG0ODB' 
-                                        data-env="production" 
-                                        data-redirecturi="https://anth-ja77-local-contexts-8985.uc.r.appspot.com/researchers/connect-orcid/"
-                                    {% elif 'sandbox.localcontextshub' in request.get_host %}
-                                        data-clientid='APP-6SAN29B74JQ6FEUQ' 
-                                        data-env="sandbox" 
-                                        data-redirecturi="https://anth-ja77-lc-dev-42d5.uc.r.appspot.com/researchers/connect-orcid/"
-                                    {% endif %}
-                                >
+                            {% else %}
+                                <div class="flex-this space-between">
+                                    <div class="w-50"><p>We encourage you to have an ORCiD ID. <br>You can <a class="darkteal-text underline-hover" href="https://orcid.org/" target="_blank" rel="noopener">read more about ORCiD here</a>.</p></div>
+                                    <!-- Show ORCiD widget based on hostname -->
+                                    <div 
+                                        id="orcidWidget" 
+                                        {% if 'localcontextshub' in request.get_host %}
+                                            data-clientid='APP-IBW6UOF5FGJG0ODB' 
+                                            data-env="production" 
+                                            data-redirecturi="https://localcontextshub.org/researchers/connect-orcid/"
+                                        {% elif 'localhost' in request.get_host %}
+                                            data-clientid='APP-6SAN29B74JQ6FEUQ' 
+                                            data-env="sandbox" 
+                                            data-redirecturi="http://localhost:8000/researchers/connect-orcid/"
+                                        {% elif 'anth-ja77-local-contexts-8985' in request.get_host %}
+                                            data-clientid='APP-IBW6UOF5FGJG0ODB' 
+                                            data-env="production" 
+                                            data-redirecturi="https://anth-ja77-local-contexts-8985.uc.r.appspot.com/researchers/connect-orcid/"
+                                        {% elif 'sandbox.localcontextshub' in request.get_host %}
+                                            data-clientid='APP-6SAN29B74JQ6FEUQ' 
+                                            data-env="sandbox" 
+                                            data-redirecturi="https://anth-ja77-lc-dev-42d5.uc.r.appspot.com/researchers/connect-orcid/"
+                                        {% endif %}
+                                    >
+                                    </div>
                                 </div>
-                            </div>
-                    
-                            {% if 'sandbox.localcontextshub' in request.get_host %}
-                                <small class="bold">Please note that since this is a test site, the ORCiD used will be the <a class="darkteal-text underline-hover" href="https://sandbox.orcid.org/">sandbox version</a>.</small><br>
-                            {% elif 'localhost' in request.get_host %}
-                                <small class="bold">Localhost uses the <a class="darkteal-text underline-hover" href="https://sandbox.orcid.org/">sandbox version</a> of ORCiD.</small><br>
+                        
+                                {% if 'sandbox.localcontextshub' in request.get_host %}
+                                    <small class="bold">Please note that since this is a test site, the ORCiD used will be the <a class="darkteal-text underline-hover" href="https://sandbox.orcid.org/">sandbox version</a>.</small><br>
+                                {% elif 'localhost' in request.get_host %}
+                                    <small class="bold">Localhost uses the <a class="darkteal-text underline-hover" href="https://sandbox.orcid.org/">sandbox version</a> of ORCiD.</small><br>
+                                {% endif %}
                             {% endif %}
-                        {% endif %}
-                            
-                        </div>
-                    {% endif %}
+                                
+                            </div>
+                        {% endif %}                        
+                    </div>
+
 
                     {% include 'partials/_alerts.html' %}
 
