--- a/templates/accounts/newsletter-unsubscription.html
+++ b/templates/accounts/newsletter-unsubscription.html
@@ -1,67 +1,74 @@
-{% extends 'auth-base.html' %} {% block title %} Newsletter Preferences {% endblock %}{% load static %} {% block main %}
+{% extends 'gradient-base.html' %} {% block title %} Newsletter Preferences {% endblock %}{% load static %} {% block main %}
 
-    <div class="content-card-v2 content-card-space">
+    <div class="content-card-v3">
+        <div class="newsletter-row">
+            <div class="newsletter-column">
+                <div class="newsletter-form">
+                    {% if subscribed %}
+                        <div>
+                            <img class="w-25 h-25" src="{% static 'images/logos/sm-logo-registry.png' %}" alt="">
+                            <h1 class="no-top-margin">Update Newsletter Preferences</h1>
+                            <p>Preferences for <a class="darkteal-text underline-hover" href="mailto:{{ email }}">{{ email }}</a></p>
+                        </div>
 
-        {% if subscribed %}
-        <div>
-            <h1 class="no-top-margin">Update Newsletter Preferences</h1>
-            <p>Preferences for {{ email }}</p>               
+                        <form method="POST" action="" enctype="multipart/form-data">
+                            {% csrf_token %}
+
+                            <div class="flex-this column w-70">
+                                <label>What topic(s) are you interested in? <br> <em>(Check all that apply):<span title="Required" class="red-text"> *</span></em></label><br>
+                                <div class="flex-this w-100 margin-top-1">
+                                    <div class="w-100 margin-right-1">
+                                        <input class="newsletter-toggle" type="checkbox" id="tech" name="topic" value="tech" {% if tech == 'yes' %} checked {% endif %}>
+                                        <label for="tech">Hub & API Updates</label><br><br>
+                                        <input class="newsletter-toggle" type="checkbox" id="news" name="topic" value="news" {% if news == 'yes' %} checked {% endif %}>
+                                        <label for="news">News and Resources</label><br><br>
+                                        <input class="newsletter-toggle" type="checkbox" id="events" name="topic" value="events" {% if events == 'yes' %} checked {% endif %}>
+                                        <label for="events">Events</label><br><br>
+                                        <input class="newsletter-toggle" type="checkbox" id="notice" name="topic" value="notice" {% if notice == 'yes' %} checked {% endif %}>
+                                        <label for="notice">Notices in Use</label><br><br>
+                                        <input class="newsletter-toggle" type="checkbox" id="labels" name="topic" value="labels" {% if labels == 'yes' %} checked {% endif %}>
+                                        <label for="labels">Labels in Use</label><br>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex-this column w-70">
+                                {% include 'partials/_alerts.html' %}
+                            </div>
+                            <div class="flex-this column w-100">
+                                <p>Unsubscribe from all newsletter topics</p>
+                                <div class="flex-this w-100 margin-top-1">
+                                    <div class="w-100 margin-right-1">
+                                        <input class="newsletter-toggle" type="checkbox" id="unsubscribe" name="unsubscribe" value="unsubscribe" onchange="unsubscribeDeselect()">
+                                        <label for="unsubscribe"> Yes, I would like to unsubscribe from all newsletter topics.</label>
+                                    </div>
+                                </div>
+                                <div class="flex-this w-100">
+                                    <div class="w-100">
+                                        <button type="submit" class="primary-btn action-btn margin-top-2" id="updatebtn" name="updatebtn">Update changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    {% else %}
+                        <div>
+                            <h1 class="no-top-margin">You have been successfully unsubscribed.</h1>
+                            <p>If this was a mistake and you would like to subscribe again, click <a class="darkteal-text underline-hover" href="{% url 'newsletter-subscription' %}">here</a>.</p>               
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="newsletter-column">
+                <div class="image-container">
+                    <h3 class="centered-text">Let's keep in touch.</h3>
+                    <img class="centered-icon" src="{% static 'images/news-letter/send.png' %}" alt="">
+                    <img class="w-100 h-100" src="{% static 'images/news-letter/evi-radauscher-NLlvBb9sLts-unsplash.jpg' %}" alt="">
+                    <div class="image-overlay"></div>
+                </div>
+            </div>
         </div>
-
-        <form method="POST" action="" enctype="multipart/form-data">
-            {% csrf_token %}
-
-            <div class="flex-this column w-70">
-                <label>What topic(s) are you interested in? (Check all that apply):<span title="Required" class="red-text"> *</span></label>
-                <div class="flex-this w-100 margin-top-1">
-                    <div class="w-100 margin-right-1 margin-left-16">
-                        <input type="checkbox" id="tech" name="topic" value="tech" {% if tech == 'yes' %} checked {% endif %}>
-                        <label for="tech"> Hub & API Updates</label><br>
-                        <input type="checkbox" id="news" name="topic" value="news" {% if news == 'yes' %} checked {% endif %}>
-                        <label for="news"> News and Resources</label><br>
-                        <input type="checkbox" id="events" name="topic" value="events" {% if events == 'yes' %} checked {% endif %}>
-                        <label for="events"> Events</label><br>
-                        <input type="checkbox" id="notice" name="topic" value="notice" {% if notice == 'yes' %} checked {% endif %}>
-                        <label for="notice"> Notices in Use</label><br>
-                        <input type="checkbox" id="labels" name="topic" value="labels" {% if labels == 'yes' %} checked {% endif %}>
-                        <label for="labels"> Labels in Use</label>
-                    </div>
-                </div>
-                <div class="flex-this w-100">
-                    <div class="w-100 margin-right-1">
-                        <button type="submit" class="primary-btn action-btn margin-top-2" id="updatebtn" name="updatebtn">Update</button>
-                    </div>
-                </div>
-            </div>
-            <div class="flex-this column w-70">
-                {% include 'partials/_alerts.html' %}
-            </div>
-            <div class="flex-this column w-70">
-                <h3 class="no-bottom-margin no-top-margin">Unsubscribe from all newsletter topics</h3>
-                <div class="flex-this w-100 margin-top-1">
-                    <div class="w-100 margin-right-1 margin-left-16">
-                        <input type="checkbox" id="unsubscribe" name="unsubscribe" value="unsubscribe" onchange="unsubscribeDeselect()">
-                        <label for="unsubscribe"> Yes, I would like to unsubscribe from all newsletter topics.</label>
-                    </div>
-                </div>
-                <div class="flex-this w-100">
-                    <div class="w-100 margin-right-1">
-                        <button type="submit" class="primary-btn action-btn margin-top-2" id="unsubscribebtn" name="unsubscribebtn" disabled>Unsubscribe</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-        {% else %}
-            <div>
-                <h1 class="no-top-margin">You have been successfully unsubscribed.</h1>
-                <p>If this was a mistake and you would like to subscribe again, click <a class="darkteal-text underline-hover" href="{% url 'newsletter-subscription' %}">here</a>.</p>               
-            </div>
-        {% endif %}
-
     </div>
 
 <style>
     
 </style>
-
 {% endblock %}
