feat: preparation page navigates to community-boundary page

--- a/templates/accounts/preparation.html
+++ b/templates/accounts/preparation.html
@@ -54,7 +54,7 @@
                 <a 
                     class="primary-btn action-btn" 
                     {% if community %}
-                        href="{% url 'create-community' %}"
+                        href="{% url 'community-boundary' %}"
                     {% endif %}
                     {% if institution %}
                         href="{% url 'create-institution' %}"
