feat: fixed ui issue

--- a/templates/communities/community-boundary.html
+++ b/templates/communities/community-boundary.html
@@ -23,6 +23,7 @@
 
         a.disabled-btn{
             pointer-events: none;
+            user-select: none;
         }
     </style>
     <div class="w-90">
