feat: created initial define-community-boundary page

--- a/templates/communities/community-boundary.html
+++ b/templates/communities/community-boundary.html
@@ -85,7 +85,7 @@
                     id="community-boundary-continue-btn"
                     class="primary-btn action-btn disabled-btn"
                     {% if community %}
-                        href="{% url 'create-community' %}"
+                        href="{% url 'define-community-boundary' %}"
                     {% endif %}
                     {% if institution %}
                         href="{% url 'create-institution' %}"
