removed load static tag

--- a/templates/projects/embed-project.html
+++ b/templates/projects/embed-project.html
@@ -1,13 +1,10 @@
-{% load static %}
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <header>
-        <meta charset="utf-8">
-        <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" type="text/css" href="/static/css/main.css">
-    </header>
+    </head>
 
     <body>
         <!-- Icons w/o title -->
