updated tool tip content

--- a/templates/partials/_add-translation.html
+++ b/templates/partials/_add-translation.html
@@ -21,8 +21,8 @@
                         <label class='block'>Translated Language <small>(select from dropdown)</small></label>
                         <div class="tooltip" style="margin-top: 5px; margin-left: 5px;"><strong>i</strong>
                             <span class="tooltiptext">
-                                Can't find the language you are looking for?<br>
-                                Contact us at support@localcontexts.org
+                                Select the language for this Label. English, Māori, French, and Spanish translations of the Label name and template text will be loaded if selected. Can't find the language you are looking for?<br>
+                                Please contact us: support@localcontexts.org
                             </span>
                         </div>                          
                     </div>
