feat: used "add boundaries" instead of "define boundaries"

--- a/templates/communities/community-boundaries.html
+++ b/templates/communities/community-boundaries.html
@@ -44,7 +44,7 @@
                     <fieldset>
 
                         <div class="communityBoundarySelect">
-                            <input type="radio" name="selectBoundary" data-next="{% url 'define-community-boundaries' %}"/>
+                            <input type="radio" name="selectBoundary" data-next="{% url 'add-community-boundaries' %}"/>
                             <div class="communityBoundaryLabel">
                                 <strong>Native Land Digital</strong>
                             </div>
@@ -62,7 +62,7 @@
                     <fieldset>
 
                         <div class="communityBoundarySelect">
-                            <input type="radio" name="selectBoundary" data-next="{% url 'upload-boundary-file' %}"/>
+                            <input type="radio" name="selectBoundary" data-next="{% url 'upload-boundaries-file' %}"/>
                             <div class="communityBoundaryLabel">
                                 <strong>Shape file</strong>
                             </div>
