feat: removed country field from add-community-boundaries.html

--- a/templates/communities/add-community-boundaries.html
+++ b/templates/communities/add-community-boundaries.html
@@ -113,22 +113,8 @@
             Or <a href="{% url 'upload-boundaries-file' %}">upload shape file</a>
         </div>
 
-        <div class="country-container margin-top-8">
-            <label class="pad-top-1-5" for="country">Country of Community boundaries</label><br>
-            <select name="country" id="id_country">
-            <option value="" selected="">---------</option>
-            <option value="AF">Afghanistan</option>
-            <option value="AX">Åland Islands</option>
-            <option value="AL">Albania</option>
-            <option value="DZ">Algeria</option>
-            <option value="AS">American Samoa</option>
-            <option value="AD">Andorra</option>
-            <option value="AO">Angola</option>
-            </select>
-        </div>
-
         <div id="region-container">
-            <label class="pad-top-1-5" for="country">Search the Native Land Digital database</label><br>
+            <label class="pad-top-1-5">Search the Native Land Digital database</label><br>
             <div id="community-boundary-search">
                 <input class="input-field search" type="text"
                        placeholder="Search by address, community name or town"
@@ -142,7 +128,7 @@
             <div id="selected-location" class="hidden">
                 <br>
                 <strong>
-                    <label class="pad-top-1-5" for="country">Selected Location</label>
+                    <label class="pad-top-1-5">Selected Location</label>
                 </strong><br>
 
                 <div id="selected-title-wrapper">
