--- a/templates/communities/add-community-boundaries.html
+++ b/templates/communities/add-community-boundaries.html
@@ -152,18 +152,13 @@
                 <a
                     id="community-boundary-continue-btn"
                     class="primary-btn action-btn disabled-btn"
-                    {% if community %}
-                        href="{% url 'create-community' %}"
-                    {% endif %}
-                    {% if institution %}
-                        href="{% url 'create-institution' %}"
-                    {% endif %}
+                    href="{% url 'confirm-community' account_id %}"
                 >
                     Confirm location <i class="fa fa-arrow-right"></i>
                 </a>
             </div>
             <div class="margin-right-8" id="skip-this-step">
-                <a class="primary-btn white-btn" href="{% url 'dashboard' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
+                <a class="primary-btn white-btn" href="{% url 'confirm-community' account_id %}">Skip this step <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
