--- a/templates/communities/community-boundaries.html
+++ b/templates/communities/community-boundaries.html
@@ -91,7 +91,7 @@
                 </a>
             </div>
             <div class="margin-right-8" id="skip-this-step">
-                <a class="primary-btn white-btn" href="{% url 'dashboard' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
+                <a class="primary-btn white-btn" href="{% url 'confirm-community' account_id %}">Skip this step <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
     </div>
