--- a/templates/communities/add-community-boundaries.html
+++ b/templates/communities/add-community-boundaries.html
@@ -151,6 +151,7 @@
                     id="community-boundary-continue-btn"
                     class="primary-btn action-btn disabled-btn"
                     href="{% url 'confirm-community' account_id %}"
+                    onclick="setBoundaries(); event.preventDefault()"
                 >
                     Confirm location <i class="fa fa-arrow-right"></i>
                 </a>
@@ -213,9 +214,44 @@
             </div>`
             )
 
+            // set selected data for selection
+            const selection = $('#selected-title')
+            selection.data('slug', slug)
+
             hideSearchDropDown()
             showSelectedSlug()
             enableContinueButton()
+        }
+
+        async function setBoundaries() {
+            try {
+                // do post call to get boundaries
+                const href = $('#community-boundary-continue-btn').attr('href')
+                const slug = $('#selected-title').data('slug')
+
+                const url = `https://native-land.ca/wp-json/nativeland/v1/api/index.php?maps=territories&name=${slug}`
+                const response = await fetch(url)
+                const data = await response.json()
+
+                if (data.length === 0) {
+                    throw new Error('Region Does Not Have Any Boundaries')
+                }
+
+                const boundary = data[0]
+                const payload = {
+                    source: url,
+                    name: boundary.properties.Name,
+                    coordinates: boundary.geometry.coordinates
+                }
+
+                // do post call to set boundaries in request
+
+                // relocate to the window href url
+                window.location.href = href
+
+            } catch (error) {
+                console.error('Error Fetching Boundaries:', error)
+            }
         }
     </script>
 {% endblock %}
