--- a/templates/partials/_update-account.html
+++ b/templates/partials/_update-account.html
@@ -254,37 +254,30 @@
                                     <div 
                                         id="orcidWidget" 
                                         {% if 'localcontextshub' in request.get_host %}
-                                            data-clientid='APP-IBW6UOF5FGJG0ODB' 
+                                            data-clientid='APP-3AGU5OQX7M7UKIMD' 
                                             data-env="production" 
-                                            data-redirecturi="https://localcontextshub.org/researchers/connect-orcid/"
-                                        {% elif 'localhost' in request.get_host %}
-                                            data-clientid='APP-6SAN29B74JQ6FEUQ' 
-                                            data-env="sandbox" 
-                                            data-redirecturi="http://localhost:8000/researchers/connect-orcid/"
-                                        {% elif 'anth-ja77-local-contexts-8985' in request.get_host %}
-                                            data-clientid='APP-IBW6UOF5FGJG0ODB' 
-                                            data-env="production" 
-                                            data-redirecturi="https://anth-ja77-local-contexts-8985.uc.r.appspot.com/researchers/connect-orcid/"
+                                            data-redirecturi="https://localcontextshub.org/researchers/connect-researcher/"
                                         {% elif 'sandbox.localcontextshub' in request.get_host %}
-                                            data-clientid='APP-6SAN29B74JQ6FEUQ' 
+                                            data-clientid='APP-M1RE2U9DY1B6MNYD' 
                                             data-env="sandbox" 
-                                            data-redirecturi="https://anth-ja77-lc-dev-42d5.uc.r.appspot.com/researchers/connect-orcid/"
+                                            data-redirecturi="https://sandbox.localcontextshub.org/researchers/connect-researcher/"
+                                        {% elif 'local-contexts-hub-sandbox' in request.get_host %}
+                                            data-clientid='APP-M1RE2U9DY1B6MNYD' 
+                                            data-env="develop" 
+                                            data-redirecturi="https://local-contexts-hub-sandbox.uc.r.appspot.com/researchers/connect-researcher/"
                                         {% endif %}
                                     >
                                     </div>
                                 </div>
                         
-                                {% if 'sandbox.localcontextshub' in request.get_host %}
+                                {% if 'local-contexts-hub-sandbox' in request.get_host or 'sandbox.localcontextshub' in request.get_host  %}
                                     <small class="bold">Please note that since this is a test site, the ORCiD used will be the <a class="darkteal-text underline-hover" href="https://sandbox.orcid.org/">sandbox version</a>.</small><br>
-                                {% elif 'localhost' in request.get_host %}
-                                    <small class="bold">Localhost uses the <a class="darkteal-text underline-hover" href="https://sandbox.orcid.org/">sandbox version</a> of ORCiD.</small><br>
-                                {% endif %}
+                                {% endif %}  
                             {% endif %}
                                 
                             </div>
                         {% endif %}                        
                     </div>
-
 
                     {% include 'partials/_alerts.html' %}
 
