show orcid widget in /researchers/update

--- a/templates/partials/_update-account.html
+++ b/templates/partials/_update-account.html
@@ -205,7 +205,7 @@
                         {% endif %}
                     </div>
 
-                    <div class="hide"> <!-- TODO: UPDATE ORCID. HIDDEN FOR NOW-->
+                    <div>
                         {% if researcher %}
                             <div><h3>ORCiD</h3></div>
                             <div class="w-100 margin-bottom-16">
