--- a/templates/widget_forms/community/boundary_widget.html
+++ b/templates/widget_forms/community/boundary_widget.html
@@ -1,13 +1,1 @@
-{% extends 'base.html' %}
-
-
-{% block content %}
-  <h2>{% if object %}Update{% else %}Create{% endif %}</h2>
-  <form action="" method="post">
-    {% csrf_token %}
-
-    {{ form }}
-
-    <button>Placeholder</button>
-  </form>
-{% endblock %}
+{{ boundaries }}
